# bad-memory-good-agent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
voice_assistant/: app.py
